edit assets path

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nike online store - Tailwind CSS - Front end developer">
     <!-- Favicon -->
-    <link rel="icon" type="image/ico" href="../assets/icons/favicon.ico">
+    <link rel="icon" type="image/ico" href="./assets/icons/favicon.ico">
     <!-- CSS -->
     <link rel="stylesheet" href="./output.css">
     <!-- Preload priority -->
-    <link rel="Preload" href="../assets/images/big-shoe1.webp" as="image" type="image/webp">
+    <link rel="Preload" href="./assets/images/big-shoe1.webp" as="image" type="image/webp">
     <title>|Nike|</title>
 </head>
 <body class="overflow-x-hidden">
@@ -17,11 +17,11 @@
         <header>
             <nav class="container mx-auto flex items-center justify-between h-20 relative px-4">
                 <a href="">
-                    <img src="../assets/images/header-logo.svg" alt="header-logo" class="cursor-pointer w-[128px] h-[29px]">
+                    <img src="./assets/images/header-logo.svg" alt="header-logo" class="cursor-pointer w-[128px] h-[29px]">
                 </a>
                 <div class="group w-fit">
                     <div class="w-6 h-6 cursor-pointer md:hidden">
-                        <img src="../assets/icons/hamburger.svg" alt="hamburger" class="w-[25px] h-[25px]">
+                        <img src="./assets/icons/hamburger.svg" alt="hamburger" class="w-[25px] h-[25px]">
                     </div>
                     <ul
                         class="flex max-md:hidden max-md:group-hover:flex max-md:flex-col max-md:absolute max-md:bg-white top-12 right-2 max-md:shadow-lg rounded-lg py-4 z-20">
@@ -48,7 +48,7 @@
             </nav>
         </header>
         <section id="home" class="relative">
-            <img src="../assets/images/collection-background.svg" alt="collection-background"
+            <img src="./assets/images/collection-background.svg" alt="collection-background"
                 class="absolute -z-10 left-1/2 bottom-0 hidden lg:block w-[762] h-[836]">
             <div
                 class="container mx-auto flex flex-col lg:flex-row items-center justify-between mb-24 max-lg:mt-4 text-center lg:text-start px-4">
@@ -61,7 +61,7 @@
                         active life.
                     </p>
                     <button class="button flex items-center gap-3">
-                        <span class="text-white">Shop now</span><img src="../assets/icons/arrow-right.svg" alt="arrow-right"
+                        <span class="text-white">Shop now</span><img src="./assets/icons/arrow-right.svg" alt="arrow-right"
                             class="w-5 h-5">
                     </button>
                     <div class="flex items-center justify-center lg:justify-start gap-8 mt-8">
@@ -80,13 +80,13 @@
                     </div>
                 </section>
                 <section class="min-w-1/2 w-full flex flex-col items-center">
-                    <img src="../assets/images/big-shoe1.webp" alt="big-shoe1" class="w-full h-auto max-w-lg">
+                    <img src="./assets/images/big-shoe1.webp" alt="big-shoe1" class="w-full h-auto max-w-lg">
                     <div class="flex justify-center basic-background gap-4 w-full mt-4">
-                        <img src="../assets/images/thumbnail-shoe1.svg" alt="shoe1"
+                        <img src="./assets/images/thumbnail-shoe1.svg" alt="shoe1"
                             class="p-3 rounded-lg bg-basic-img bg-right bg-cover border border-solid border-main-color cursor-pointer w-[30%] max-w-28 h-auto">
-                        <img src="../assets/images/thumbnail-shoe2.svg" alt="shoe2"
+                        <img src="./assets/images/thumbnail-shoe2.svg" alt="shoe2"
                             class="p-3 rounded-lg bg-basic-img bg-right bg-cover hover:border border-solid border-main-color cursor-pointer w-[30%] max-w-28 h-auto">
-                        <img src="../assets/images/thumbnail-shoe3.svg" alt="shoe3"
+                        <img src="./assets/images/thumbnail-shoe3.svg" alt="shoe3"
                             class="p-3 rounded-lg bg-basic-img bg-right bg-cover hover:border border-solid border-main-color cursor-pointer w-[30%] max-w-28 h-auto">
                     </div>
                 </section>
@@ -99,36 +99,36 @@
                     world of comfort, design, and value</p>
                 <div class="flex items-center justify-center gap-4 text-center flex-wrap">
                     <div>
-                        <img src="../assets/images/shoe4.svg" alt="shoe4" class="mb-4">
+                        <img src="./assets/images/shoe4.svg" alt="shoe4" class="mb-4">
                         <div class="flex gap-2 items-center justify-center">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.5)</span>
                         </div>
                         <h3 class="lower-head">Nike Air Jordan-01</h3>
                         <p class="text-main-color font-bold text-md">$200.20</p>
                     </div>
                     <div>
-                        <img src="../assets/images/shoe5.svg" alt="shoe5" class="mb-4">
+                        <img src="./assets/images/shoe5.svg" alt="shoe5" class="mb-4">
                         <div class="flex gap-2 items-center justify-center">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.7)</span>
                         </div>
                         <h3 class="lower-head">Nike Air Jordan-10</h3>
                         <p class="text-main-color font-bold text-md">$210.20</p>
                     </div>
                     <div>
-                        <img src="../assets/images/shoe6.svg" alt="shoe6" class="mb-4">
+                        <img src="./assets/images/shoe6.svg" alt="shoe6" class="mb-4">
                         <div class="flex gap-2 items-center justify-center">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.9)</span>
                         </div>
                         <h3 class="lower-head">Nike Air Jordan-100</h3>
                         <p class="text-main-color font-bold text-md">$220.20</p>
                     </div>
                     <div>
-                        <img src="../assets/images/shoe7.svg" alt="shoe7" class="mb-4">
+                        <img src="./assets/images/shoe7.svg" alt="shoe7" class="mb-4">
                         <div class="flex gap-2 items-center justify-center">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.4)</span>
                         </div>
                         <h3 class="lower-head">Nike Air Jordan-001</h3>
@@ -147,26 +147,26 @@
                         you with unmatched quality, innovation, and a touch of elegance.</p>
                     <p class="text-p">Our dedication to detail and excellence ensures your satisfaction</p>
                     <button class="button flex items-center gap-3 mb-8 mx-auto md:mx-0">
-                        <span class="text-white">Shop now</span><img src="../assets/icons/arrow-right.svg" alt="arrow-right" class="w-5 h-5">
+                        <span class="text-white">Shop now</span><img src="./assets/icons/arrow-right.svg" alt="arrow-right" class="w-5 h-5">
                     </button>
                 </div>
-                <img src="../assets/images/shoe8.svg" alt="shoe8" class="max-w-md w-full md:w-1/2 h-auto">
+                <img src="./assets/images/shoe8.svg" alt="shoe8" class="max-w-md w-full md:w-1/2 h-auto">
             </div>
         </section>
         <section id="about-us">
             <div class="container mx-auto flex gap-8 flex-wrap mb-24 px-4 text-center md:justify-between md:text-start">
                 <div class="shadow-3xl p-10 rounded-2xl flex-grow w-[350px]">
-                    <img src="../assets/icons/truck-fast.svg" alt="truck-fast" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
+                    <img src="./assets/icons/truck-fast.svg" alt="truck-fast" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
                     <h3 class="lower-head">Free shipping</h3>
                     <p class="text-p">Enjoy seamless shopping with our complimentary shipping service.</p>
                 </div>
                 <div class="shadow-3xl p-10 rounded-2xl flex-grow w-[400px]">
-                    <img src="../assets/icons/shield-tick.svg" alt="shield-tick" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
+                    <img src="./assets/icons/shield-tick.svg" alt="shield-tick" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
                     <h3 class="lower-head">Secure Payment</h3>
                     <p class="text-p">Experience worry-free transactions with our secure payment options.</p>
                 </div>
                 <div class="shadow-3xl p-10 rounded-2xl flex-grow w-[400px]">
-                    <img src="../assets/icons/support.svg" alt="support" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
+                    <img src="./assets/icons/support.svg" alt="support" class="bg-main-color p-2 rounded-full mx-auto md:mx-0 w-10 h-10">
                     <h3 class="lower-head">Love to help you</h3>
                     <p class="text-p">Our dedicated team is here to assist you every step of the way.</p>
                 </div>
@@ -175,7 +175,7 @@
         </section>
         <section>
             <div class="container mx-auto mb-24 px-4 flex flex-wrap items-center justify-center gap-y-4 md:justify-between">
-                <img src="../assets/images/offer.svg" alt="offer" class="w-full max-w-xl md:w-1/2 h-auto">
+                <img src="./assets/images/offer.svg" alt="offer" class="w-full max-w-xl md:w-1/2 h-auto">
                 <div class="md:w-1/2 flex-shrink">
                     <h2 class="sub-head text-center md:text-start"><span class="text-main-color">Special</span> Offer</h2>
                     <p class="text-p">Embark on a shopping journey that redefines your experience with unbeatable deals. From
@@ -199,23 +199,23 @@
                     us.</p>
                 <div class="flex items-center gap-4 mt-24 flex-col md:flex-row">
                     <div class="w-full md:w-1/2">
-                        <img src="../assets/images/customer1.webp" alt="customer1" class="rounded-full w-24 h-24 mx-auto mb-9">
+                        <img src="./assets/images/customer1.webp" alt="customer1" class="rounded-full w-24 h-24 mx-auto mb-9">
                         <p class="text-p max-w-96 mx-auto">The attention to detail and the quality of the product exceeded my
                             expectations.
                             Highly recommended!</p>
                         <div class="flex items-center justify-center gap-2">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.5)</span>
                         </div>
                         <h3 class="lower-head">Morich Brown</h3>
                     </div>
                     <div class="w-full md:w-1/2">
-                        <img src="../assets/images/customer2.svg" alt="customer2" class="rounded-full w-24 h-24 mx-auto mb-9">
+                        <img src="./assets/images/customer2.svg" alt="customer2" class="rounded-full w-24 h-24 mx-auto mb-9">
                         <p class="text-p max-w-96 mx-auto">The product not only met but exceeded my expectations. I'll
                             definitely be a
                             returning customer!</p>
                         <div class="flex items-center justify-center gap-2">
-                            <img src="../assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
+                            <img src="./assets/icons/star.svg" alt="star" class="w-[22px] h-[22px]">
                             <span class="text-p mb-0">(4.6)</span>
                         </div>
                         <h3 class="lower-head">Lota Mongeskar</h3>
@@ -238,20 +238,20 @@
                 <div class="grid grid-cols-auto-fill gap-8 justify-center text-center justify-items-center">
                     <section>
                         <a href="">
-                            <img src="../assets/images/footer-logo.svg" alt="footer-logo" class="w-32 h-7 mb-8 mx-auto xl:mx-0">
+                            <img src="./assets/images/footer-logo.svg" alt="footer-logo" class="w-32 h-7 mb-8 mx-auto xl:mx-0">
                         </a>
                         <p class="links">Get shoes ready for the new term at your nearest Nike store. Find Your perfect Size In
                             Store.
                             Get Rewards</p>
                         <div class="flex gap-3 mt-8 justify-center xl:justify-start">
                             <a href="">
-                                <img src="../assets/icons/facebook.svg" alt="facebook" class="bg-white rounded-full p-3 w-12 h-12">
+                                <img src="./assets/icons/facebook.svg" alt="facebook" class="bg-white rounded-full p-3 w-12 h-12">
                             </a>
                             <a href="">
-                                <img src="../assets/icons/twitter.svg" alt="twitter" class="bg-white rounded-full p-3 w-12 h-12">
+                                <img src="./assets/icons/twitter.svg" alt="twitter" class="bg-white rounded-full p-3 w-12 h-12">
                             </a>
                             <a href="">
-                                <img src="../assets/icons/instagram.svg" alt="instagram" class="bg-white rounded-full p-3 w-12 h-12">
+                                <img src="./assets/icons/instagram.svg" alt="instagram" class="bg-white rounded-full p-3 w-12 h-12">
                             </a>
                         </div>
                     </section>
